added textarea content reactivie autoresizing SQL command sending input

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -19,6 +19,9 @@
     --sql-primary: #8EE3EF;
     --sql-secondary: #37718E;
     --sql-dark: #254E70;
+
+    //borders
+    --border-radius: 10px;
 }
 
 h1, h2, h3, h4, h5, p {
