added styling to the input field

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -24,6 +24,15 @@
     --border-radius: 10px;
 }
 
+/**
+* Fonts
+*/
+
+//SQL Font
+.sql.font {
+    font-family: "Open Sans", sans-serif;
+}
+
 h1, h2, h3, h4, h5, p {
     margin: 0;
 }
