kind of finished input styling

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,6 @@
 //OpenSans font
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap');
-
+@import 'animations.scss';
 :root {
     //Primary color swatch
     --primary: #94C595;
