--- a/src/assets/styles/animations.scss
+++ b/src/assets/styles/animations.scss
@@ -4,7 +4,7 @@
 
 //Fade in-out
 .fade-enter-active, .fade-leave-active {
-    transition: opacity .5s;
+    transition: opacity .3s ease-in;
   }
   .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
