added and polished more UI elements, added sql-input buttons, improved responsiveness, added a proper title to sql view, updated colors

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -3,7 +3,18 @@
 
 //Roboto font, Share Tech Mono font, VT323 font
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600;700&family=Share+Tech+Mono&family=VT323&display=swap");
+
+//Bungee and Bungee Shade (3D style) font
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Shade&display=swap');
+.bungee{
+    font-family: 'Bungee', cursive;
+}
+.bungee-shade{
+    font-family: 'Bungee Shade', cursive;
+}
+
 @import 'animations.scss';
+
 :root {
     //Primary color swatch
     --primary: #94C595;
@@ -19,9 +30,23 @@
     --g-secondary: #6C809A;
 
     //Sql color swatch
-    --sql-primary: #8EE3EF;
-    --sql-secondary: #37718E;
-    --sql-dark: #254E70;
+    --sql-primary: rgb(57, 163, 249);
+    --sql-primary-v: 57, 163, 249;
+
+    --sql-secondary: rgb(16, 87, 145);
+    --sql-secondary-v: 16, 87, 145;
+
+    --sql-light: rgb(176, 218, 252);
+    --sql-light-v: 176, 218, 252;
+
+    --sql-lighter-dark: rgb(16, 87, 145);
+    --sql-lighter-dark-v: 16, 87, 145;
+
+    --sql-dark: rgb(37, 78, 112);
+    --sql-dark-v: 37, 78, 112;
+
+    --sql-light-primary: rgb(7, 128, 227);
+    --sql-light-primary-v: 7, 128, 227;
 
     //borders
     --border-radius: 10px;
@@ -59,7 +84,17 @@ font-weight: 400;
 .technical-desc {
     font-family: "Roboto Slab", serif;
 }
-  
+
 .technical {
     font-family: "VT323", monospace;
+}
+
+// A View's primary title
+.title {
+    margin: 1rem 0 .5rem 0;
+    color: var(--sql-dark);
+}
+
+button {
+    cursor: pointer;
 }
