--- a/src/assets/styles/animations.scss
+++ b/src/assets/styles/animations.scss
@@ -5,7 +5,14 @@
 //Fade in-out
 .fade-enter-active, .fade-leave-active {
     transition: opacity .3s ease-in;
-  }
-  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
-  }
+}
+
+.fade-fast-enter-active, .fade-fast-leave-active {
+  transition: opacity .1s;
+}
+.fade-fast-enter, .fade-fast-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
