--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -112,3 +112,8 @@ font-weight: 400;
 button {
     cursor: pointer;
 }
+
+.neumorphic {
+    box-shadow: 6px 6px 12px 0 rgba(0, 0, 0, 0.2),
+    -6px -6px 12px 0 rgba(255, 255, 255, 0.5);
+}
