result bar now shows successful CREATE colors

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -23,6 +23,9 @@
     --secondary: rgb(104, 126, 96);
     --secondary-v: 104, 126, 96;
 
+    --success: rgb(109, 128, 105);
+    --success-v: 109, 128, 105;
+
     --light: rgb(161, 232, 175);
     --light-v: 161, 232, 175;
 
