logo has been transformed to .svg file to be scalable and ensure cross-browser/platform compatibility

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -29,7 +29,7 @@
     --light: rgb(161, 232, 175);
     --light-v: 161, 232, 175;
 
-    --dark: rgb(60, 54, 42);
+    --dark: #29251d;
     --dark-v: 60, 54, 42;
 
     --danger: rgb(237, 28, 36);
@@ -56,10 +56,10 @@
     --sql-light: rgb(176, 218, 252);
     --sql-light-v: 176, 218, 252;
 
-    --sql-lighter-dark: rgb(16, 87, 145);
+    --sql-lighter-dark: #105791;
     --sql-lighter-dark-v: 16, 87, 145;
 
-    --sql-dark: rgb(37, 78, 112);
+    --sql-dark: #254e70;
     --sql-dark-v: 37, 78, 112;
 
     --sql-light-primary: rgb(7, 128, 227);
