completed registration page

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -139,4 +139,26 @@ button {
 .neumorphic {
     box-shadow: 6px 6px 12px 0 rgba(0, 0, 0, 0.2),
     -6px -6px 12px 0 rgba(255, 255, 255, 0.5);
+
+    transition: box-shadow 0.3s;
+}
+
+.neumorphic:hover {
+    box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.2),
+    -2px -2px 6px 0 rgba(255, 255, 255, 0.5);
+}
+
+.neumorphic:active.n-active{
+    box-shadow: inset 3px 3px 12px 0 rgba(0, 0, 0, 0.2),
+    inset -3px -3px 12px 0 rgba(255, 255, 255, 0.123);
+}
+
+.neumorphic.inset {
+    box-shadow: inset 3px 3px 12px 0 rgba(0, 0, 0, 0.2),
+    inset -3px -3px 12px 0 rgba(255, 255, 255, 0.123);
+}
+
+.neumorphic:disabled:hover{
+    box-shadow: 6px 6px 12px 0 rgba(0, 0, 0, 0.2),
+    -6px -6px 12px 0 rgba(255, 255, 255, 0.5);
 }
