added too many things man

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -141,7 +141,7 @@ button {
     transition: box-shadow 0.3s;
 }
 
-.neumorphic:hover {
+.neumorphic:hover.hover {
     box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.2),
     -2px -2px 6px 0 rgba(255, 255, 255, 0.5);
 }
@@ -159,4 +159,8 @@ button {
 .neumorphic:disabled:hover{
     box-shadow: 6px 6px 12px 0 rgba(0, 0, 0, 0.2),
     -6px -6px 12px 0 rgba(255, 255, 255, 0.5);
+}
+
+.neumorphic:disabled {
+    opacity: .6;
 }
