--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -36,12 +36,23 @@
     --danger: rgb(237, 28, 36);
     --danger-v: 237,28,36;
 
+    --danger-dark: rgb(139, 15, 19);
+    --danger-dark-v: 139, 15, 19;
+
     --danger-light: rgb(239, 49, 56);
     --danger-light-v: 239, 49, 56;
 
     --danger-lighter: rgb(240, 68, 74);
     --danger-lighter-v: 240, 68, 74;
 
+    --danger-warn: #EB4438;
+    --danger-warn-v: 235, 68, 56;
+
+    --warn: #FAC998;
+    --warn-v: 250, 201, 152;
+
+    --warn-dark: #CC7116;
+    --warn-dark-v: 204, 113, 22;
 
     //Gray shaded primary color swatch
     --g-primary: #4F759B;
