added vuex to sql, added sql history and to open another table

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -73,6 +73,12 @@
 
     //borders
     --border-radius: 10px;
+
+    $russian-violet: rgba(38, 14, 61, 1);
+    $dark-moss-green: rgba(58, 82, 33, 1);
+    $xiketic: rgba(13, 6, 20, 1);
+    $english-violet: rgba(69, 49, 89, 1);
+    $wine: rgba(125, 46, 46, 1);
 }
 
 /**
